# fastapi-ecommerce

./: README.md  alembic.ini  helper.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 22d4ec9d520c_categories_and_products_tables.py  481b00f5d0e1_orders_table.py  5c65d0c0ad01_inventories_table.py
api/: orders.py  products.py  users.py
api/utils/: inventories.py  orders.py  products.py  users.py
db/: db_setup.py
db/data/: categories.json  products.json
db/models/: inventory.py  order.py  product.py
pydantic_schemas/: inventory.py  order.py  product.py  user.py
